--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "node scripts/build.js",
     "seed": "node scripts/seedDB.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "installDeps": "yarn && cd client && yarn"
+    "installDeps": "yarn && cd client && yarn",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -27,5 +28,6 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "react-router-dom": "4.3.1"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
