--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "node scripts/build.js",
     "seed": "node scripts/seedDB.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "installDeps": "yarn && yarn seed && cd client && yarn",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "installDeps": "yarn && cd client && yarn",
+    "heroku-postbuild": "yarn seed && cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
