--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "seed": "node scripts/seedDB.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "installDeps": "yarn && cd client && yarn",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build && npm run seed"
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run seed && npm run build"
   },
   "author": "",
   "license": "ISC",
